fix settings button overlap

--- a/src/src/style.css
+++ b/src/src/style.css
@@ -99,7 +99,7 @@ body {
 /**/
 
 .alert-container {
-  @apply p-10 overflow-x-auto text-center rounded-none w-full bg-white shadow-2xl drop-shadow-2xl justify-center items-center fixed top-0 left-0;
+  @apply p-10 overflow-x-auto text-center rounded-none w-full bg-white shadow-2xl drop-shadow-2xl justify-center items-center fixed top-0 left-0 z-10;
   display: flex;
 }
 
@@ -149,11 +149,10 @@ body {
   height: calc(100% + var(--border-width) * 2);
   background-size: 300% 300%;
   background-position: 0 50%;
-  animation: moveGradient 4s alternate infinite;
+  animation: moveGradient 2s alternate infinite;
   position: absolute;
   /* background-image: linear-gradient(60deg, #5f86f2, #a65ff2, #f25fd0, #f25f61, #f2cb5f, #abf25f, #5ff281, #5ff2f0); */
   background-image: linear-gradient(60deg, #f25fd0, #f25f61, #f2cb5f);
-
 }
 
 @keyframes moveGradient {
